# ozon_price_tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README-en.md  README-ru.md  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-k3s-argocd.yaml  deploy-pr-to-dev.yaml  release-please.yml
app/: bot.py  callbacks.py  config.py  i18n.py  metrics.py  scheduler.py
app/db/: db.py  migrations.py  models.py
app/handlers/: add_product.py  products.py  settings.py  start.py
app/keyboards/: common.py  main.py  products.py
app/middlewares/: db_session.py  errors.py
app/repositories/: products.py  users.py
app/services/: marketplace_client.py  ozon_client.py
app/utils/: logging.py  telegram_helpers.py  validators.py
docs/: BUGFIX_METRICS_CHARSET.md  DEPLOYMENT-en.md  DEPLOYMENT.md  README-en.md  README.md
k8s/argocd/: application-dev.yaml  application-monitoring-dev.yaml  application-monitoring-prod.yaml  application-prod.yaml
k8s/argocd/install/: kustomization.yaml
k8s/base/: bot.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml
k8s/monitoring/common/: grafana-alerts.yaml  grafana-dashboard-configmap.yaml  grafana-dashboard.yaml  grafana-datasource.yaml  grafana-service.yaml  grafana.yaml  kustomization.yaml  namespace.yaml  prometheus-rbac.yaml  prometheus.yaml  service.yaml  servicemonitor.yaml
k8s/monitoring/dev/: kustomization.yaml
k8s/monitoring/production/: kustomization.yaml
migrations/: env.py
migrations/versions/: 1da9ef061b12_add_extended_user_fields.py  8a11fc5f9e2b_initial_schema.py
tests/: conftest.py  test_bot_entry_autotests.py  test_callbacks_min.py  test_config.py  test_db_core.py  test_handlers_add_product.py  test_handlers_products.py  test_handlers_start_settings.py  test_i18n.py  test_keyboards.py  test_middleware_db_session.py  test_middlewares_errors.py  test_migrations.py  test_ozon_client_autotests.py  test_ozon_client_utils.py  test_repositories.py  test_repositories_extra.py  test_scheduler.py  test_utils_validators.py
(+14 files in other folders)
